[project]
name = "heart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair[all]>=5.5.0",
    "cell2location>=0.1.4",
    "igraph>=0.11.9",
    "muon>=0.1.7",
    "omnipath>=1.0.10",
    "polars>=1.30.0",
    "pysam>=0.23.2",
    "ruff>=0.11.12",
    "scanpy>=1.11.2",
    "squidpy[interactive]>=1.6.5",
    "xarray-dataclasses==1.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
