[project]
name = "heart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair[all]>=5.5.0",
    "anndata2ri>=1.3.2",
    "cell2location>=0.1.4",
    "decoupler>=2.0.6",
    "ensembl-converter>=0.0.1",
    "igraph>=0.11.9",
    "ipykernel>=6.29.5",
    "muon>=0.1.7",
    "mygene>=3.2.2",
    "omnipath>=1.0.10",
    "polars>=1.30.0",
    "pysam>=0.23.2",
    "rpy2>=3.6.1",
    "ruff>=0.11.12",
    "scanpy>=1.11.2",
    "squidpy[interactive]>=1.6.5",
    "xarray-dataclasses==1.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
